# esp32-hybrid-pqc-key-exchange

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md
benchmarks/: cpu_cycles_parser.py  energy_calculation.py  latency_benchmark.py  memory_benchmark.py
dashboard/: index.html
data/: README.md  payload.json
data/processed_results/: parsed_cycles.csv
data/raw_logs/: raw_serial_dump.txt
data/sanitized_pcaps/: README.md  hybrid_bidirectional.pcap  hybrid_pqc_paper_verification.pcap  internet_and_pqc.pcap  telemetry_capture.pcap
docs/: hardware_setup.md  protocol_specification.md  reproduction_steps.md  research_paper.aux  research_paper.tex  threat_model.md
firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware/components/mlkem512/: CMakeLists.txt  randombytes.c  test_deep  test_deep.c  test_indcpa  test_indcpa.c  test_keccak  test_keccak.c  test_kem  test_kem.c
firmware/components/mlkem512/include/: fips202.h  mlkem512.h  params.h
firmware/components/mlkem512/src/: fips202.c  kem.c  ntt.c  poly.c
firmware/main/: CMakeLists.txt  benchmark.c  benchmark.h  crypto_hybrid.c  crypto_hybrid.h  main.c  main_backup.c  server.crt  wifi_config.h
server/: README.md  app.py  generate_pcap_captures.py  server.py  test_mlkem.py  test_mlkem_debug.py
tests/crypto_correctness_tests/: test_crypto.py
tests/integration_tests/: test_handshake.py
tls_benchmark/: CMakeLists.txt
tls_benchmark/main/: CMakeLists.txt  tls_benchmark.c
